# AI-ModernNutrition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nutrition_facts.txt
.github/workflows/: build.yaml
cmake/: CPM.cmake
exports/nutritional-menu-result/: nutrients-latex.eps  nutrients-latex.tex
source/: CMakeLists.txt  dinamic_model.h  evolutionary_algorithm.cpp  static_mealstime_model.cpp  static_model.h  user_diet.cpp  user_preferences.h
src/: dinamic_model.cpp  dinamic_optimization.cpp  dinamic_optimization.h  dinamic_preferences_prediction_model.cpp  dinamic_preferences_prediction_model.h  evolutionary_algorithm.cpp  evolutionary_algorithm.h  nutrition_facts.cpp  nutrition_facts.h  static_mealstime_model.cpp  static_mealstime_model.h  static_model.cpp  user_diet.cpp  user_diet.h  user_preferences.cpp  user_preferences.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  experiment.cpp  experiment.h  main.cpp
test/unit_test/: CMakeLists.txt  catch.hpp  dinamicTests.cpp  evaluationTests.cpp  predictionsTests.cpp
